查询生功能开发完成

--- a/index.html
+++ b/index.html
@@ -1,89 +1,13 @@
 <!DOCTYPE html>
-    <html lang="zh-CN">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-        <title>Bootstrap 101 Template</title>
-        <link rel="stylesheet" href="./css/bootstrap.min.css">
-        <style>
-            .page-header{
-                margin: 2px 0px;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="page-header">
-            <img src="image/1.jpg" width="600px" height="130px">
-        </div>
-       <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">疫情防控</a>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">首页 <span class="sr-only">(current)</span></a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">设置 <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">登录</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">注册</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="navbar-form navbar-left">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search">
-                        </div>
-                        <button type="submit" class="btn btn-default">Submit</button>
-                    </form>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Link</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="list-group">
-                        <a href="#" class="list-group-item active">
-                           疫情防控系统
-                        </a>
-                        <a href="add.html" class="list-group-item" target="et">添加人员信息</a>
-                        <a href="list.html" class="list-group-item" target="et">人员信息列表</a>
-                        <a href="report.html" class="list-group-item" target="et">演示</a>
-                    </div>
-                </div>
-                <div class="col-md-9">
-                    <iframe src="welcome.html" name="et" frameborder="0" width="100%" height="800px">展示</iframe>
-                </div>
-            </div>
-        </div>
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-     <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery-3.4.1.js"></script>
-
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Index</title>
+</head>
+<body>
+    <ul>
+        <li>录入学生</li>
+         <li>查询学生</li>
+    </ul>
+</body>
 </html>
